--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,340 @@
-.App {
+body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #F6F3EC;
+  width: 100%;
+}
+
+nav {
+  background-color: #F6F3EC;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  width: 100%; 
+  z-index: 2;
+}
+
+.nav-image{
+  width: 150px;
+  padding-left: 30px;
+}
+
+.nav-title {
+  font-size: 30px;
+  margin-left: 15px;
+  letter-spacing: 2px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+}
+
+li {
+  margin-right: 20px;
+  
+}
+
+a {
+  text-decoration: none;
+  font-size: 18px;
+  color: #555555;
+}
+
+.active a {
+  color: #F195B2;
+}
+
+li:hover a {
+  color: #F195B2;
+}
+
+.home-banner-container {
+  position: relative;
+  width: 100%;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  border-style: none;
+  overflow-clip-margin: content-box;
+  overflow: clip;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: rgba(0, 0, 0, 0.7);
+  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
+.home-banner-container img {
+  max-width: 100%;
+  height: auto;
+  width: 100%;
+  opacity: 0.7; 
+}
+
+.overlay-content {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 20px;
+}
+
+.boton {
+  height: 60px;
+  width: 190px;
+  background-color: #F195B2;
+  color: white;
+  font-size: 20px;
+  border: none;
+  border-radius: 30px;
+  padding: 10px 20px;
+  margin-top: 20px;
+}
+
+.boton:hover {
+  background-color: #F195B2;
+}
+
+.overlay-content h1{
+  font-size: 70px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.overlay-content h4{
+  font-size: 30px;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-about {
+  background-color: #F6F3EC;
+  width: 80%;
+  margin: 0 auto;
+  padding: 50px;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
+
+.container-title-about {
+  font-size: 40px;
+  color: #333333;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-left: 50PX;
+  margin-right: 50PX;
+}
+
+.bottom-content-about {
+  display: flex;
+  align-items: center;
+}
+
+.left-content-about,
+.right-content-about {
+  flex: 1;
+  padding: 20px;
+}
+
+.center-content-about {
+  flex: 1;
+  padding: 20px;
+  text-align: center;
+}
+
+.left-content-about h2,
+.right-content-about h2{
+  font-size: 20px;
+  color: #333333;
+}
+
+.left-content-about p,
+.right-content-about p{
+  font-size: 16px;
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.btn-about {
+  background-color: #F195B2;
+  color: #FFF;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 30px;
+}
+
+.center-content-about img{
+  max-width: 100%;
+  height: auto;
+}
+
+
+.container-promotion {
+  display: flex;
+  width: 100%;
+  background-color: #fff;
+}
+
+.left-side-promotion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left-side-promotion img{
+  max-width: 100%;
+  width: 550px;
+  height: auto;
+}
+
+.right-side-promotion {
+  flex: 1;
+  background-color: #F195B2; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content-promotion {
+  text-align: center;
+  padding: 20px;
+}
+
+.content-promotion h2 {
+  font-size: 24px;
+  color: #fff; /* Texto blanco */
+}
+
+.content-promotion p {
+  font-size: 16px;
+  color: #fff;
+}
+
+.btn-promotion {
+  background-color: #fff;
+  color: #F195B2;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 30px;
+}
+
+.container-products {
+  max-width: 850px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.section-title-products {
+  color: #F195B2;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.main-title-products {
+  font-size: 2.5rem;
+  margin-bottom: 25px;
+  color:  #333333;
+}
+
+.products-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.products-item {
+  flex: 0 0 21%;
+  max-width: 25%;
+  padding: 10px;
+}
+
+.products-box {
+  text-align: center;
+  background-color: white;
+  height: 300px;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+.products-box img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+}
+
+.products-title {
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 40px;
+  color: #333333;
+  line-height: 1.2;
+}
+
+.btn-products {
+  background-color: #F195B2;
+  color: #fff; 
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 30px;
+}
+
+.footer {
+  background-color: #F6F3EC;
+  color: #333333;
+  padding: 20px 0;
+  margin-top: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+
+.social-icons a{
+  color: #F195B2;
+  text-decoration: none;
+  margin-right: 5px;
+  padding-left: 30px;
+  font-size: 25px;
+}
+
+.social-icons a:hover {
+  color: #F195B2;
+}
+
+.column {
+  flex: 1;
+  padding: 0 50px;
+}
+
+.column h3, a {
+  font-size: 14px;
+  padding-left: 30px;
+}
+
+.column img{
+  width: 150px;
+  padding-left: 30px;
+  padding-bottom: 5px;
+}
+
+
+
